--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/animations": "^5.0.2",
+    "@angular/common": "^5.0.2",
+    "@angular/compiler": "^5.0.2",
+    "@angular/core": "^5.0.2",
+    "@angular/forms": "^5.0.2",
+    "@angular/http": "^5.0.2",
+    "@angular/platform-browser": "^5.0.2",
+    "@angular/platform-browser-dynamic": "^5.0.2",
+    "@angular/platform-server": "^5.0.2",
+    "@angular/router": "^5.0.2",
     "@types/jasmine": "^2.6.0",
     "class-transformer": "^0.1.8",
     "core-js": "^2.5.1",
@@ -30,7 +31,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.5.3",
-    "@angular/compiler-cli": "^4.4.6",
+    "@angular/compiler-cli": "^5.0.2",
     "@angular/language-service": "^4.4.6",
     "@types/jasmine": "^2.6.2",
     "@types/jasminewd2": "^2.0.3",
@@ -47,6 +48,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "^2.4.2"
   }
 }
