--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,5 +1,5 @@
 dispatch:
   - url: "beta.bigoquiz.com/*"
     service: beta
-  - url: "betaapi.bigoquiz.com/*"
-    service: betaapi
+  - url: "api.bigoquiz.com/*"
+    service: api
