Move to bigoquiz.com
From beta.bigoquiz.com.

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,5 +1,5 @@
 dispatch:
-  - url: "beta.bigoquiz.com/*"
-    service: beta
+  - url: "bigoquiz.com/*"
+    service: website
   - url: "api.bigoquiz.com/*"
     service: api
