--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.3",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "^6.1.1",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^4.4.6",
     "@types/jasmine": "^2.6.2",
