--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
+    "tslint": "^5.20.0",
     "typescript": "3.5.3"
   }
 }
