GitHub Actions CI: Buld with AOT too
Unfortunately, we apparently can't use matrix values in the run command.
They seem to be only for the environment. So we can't make this build
option a dimension of the matrix.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: 'Using Node.js version: ${{ matrix.node-version }}, Build type: ${{ matrix.build-type }}'
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: Build
-      run: make
+      run: make build
+      env:
+        CI: true
+    - name: Build with AOT
+      run: make build-with-aot
       env:
         CI: true
     - name: Test
