--- a/package.json
+++ b/package.json
@@ -32,13 +32,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.1",
+    "@angular-eslint/builder": "1.0.0",
+    "@angular-eslint/eslint-plugin": "1.0.0",
+    "@angular-eslint/eslint-plugin-template": "1.0.0",
+    "@angular-eslint/schematics": "1.0.0",
+    "@angular-eslint/template-parser": "1.0.0",
     "@angular/cli": "^10.2.1",
     "@angular/compiler-cli": "^10.2.4",
     "@angular/language-service": "^10.2.4",
     "@types/jasmine": "^2.6.2",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.2.2",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -49,18 +59,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~3.0.4",
-    "tslint": "~6.1.0",
-    "typescript": "4.0.5",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "@angular-eslint/builder": "1.0.0",
-    "@angular-eslint/eslint-plugin": "1.0.0",
-    "@angular-eslint/eslint-plugin-template": "1.0.0",
-    "@angular-eslint/schematics": "1.0.0",
-    "@angular-eslint/template-parser": "1.0.0",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0"
+    "typescript": "4.0.5"
   }
 }
