--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular-eslint/builder": "1.0.0",
     "@angular-eslint/eslint-plugin": "1.0.0",
     "@angular-eslint/eslint-plugin-template": "1.0.0",
-    "@angular-eslint/schematics": "1.0.0",
+    "@angular-eslint/schematics": "^20.4.0",
     "@angular-eslint/template-parser": "1.0.0",
     "@angular/cli": "^20.3.7",
     "@angular/compiler-cli": "^20.3.7",
@@ -57,7 +57,7 @@
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~3.0.4",
     "typescript": "5.8.3"
   }
