--- a/package.json
+++ b/package.json
@@ -6,58 +6,40 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.7",
-    "@angular/common": "^20.3.7",
-    "@angular/compiler": "^20.3.7",
-    "@angular/core": "^20.3.7",
-    "@angular/forms": "^20.3.7",
-    "@angular/platform-browser": "^20.3.7",
-    "@angular/platform-browser-dynamic": "^20.3.7",
-    "@angular/platform-server": "^20.3.7",
-    "@angular/router": "^20.3.7",
-    "@types/jasmine": "~3.6.0",
+    "@angular/animations": " ^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/router": "^17.3.0",
     "class-transformer": "^0.3.1",
-    "core-js": "^2.5.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.0.0-rc.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.15.1"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.7",
-    "@angular-eslint/builder": "1.0.0",
-    "@angular-eslint/eslint-plugin": "1.0.0",
-    "@angular-eslint/eslint-plugin-template": "1.0.0",
-    "@angular-eslint/schematics": "^20.4.0",
-    "@angular-eslint/template-parser": "1.0.0",
-    "@angular/cli": "^20.3.7",
-    "@angular/compiler-cli": "^20.3.7",
-    "@angular/language-service": "^20.3.7",
-    "@types/jasmine": "^2.6.2",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
+    "@angular-devkit/build-angular": "^17.3.17",
+    "@angular/cli": "^17.3.17",
+    "@angular/compiler-cli": "^17.3.0",
+    "@types/jasmine": "~5.1.0",
+    "angular-eslint": "20.5.2",
+    "eslint": "^9.39.0",
     "jasmine-core": "~5.1.0",
-    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "protractor": "^7.0.0",
-    "ts-node": "~3.0.4",
-    "typescript": "5.8.3"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.46.3"
   }
 }
