angular.json: Use builder:lint
Instead of using "build-angular:eslint".

This avoids this error when running "ng lint":

"
Cannot find builder @angular-devkit/build-angular:eslint
"

--- a/angular.json
+++ b/angular.json
@@ -121,12 +121,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:eslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": []
+            "lintFilePatterns": [
+              "e2e/**/*.ts"
+            ]
           }
         }
       }
